Remove file extensions in links

--- a/English/CLI output substitution/0. Sample tutorial.md
+++ b/English/CLI output substitution/0. Sample tutorial.md
@@ -2,7 +2,7 @@
 
 This article will demonstrate a tutorial of the command-line output substitution feature, including getting output using `clitheme-exec --showchars` and writing substitution rules based on the output.
 
-> To learn more, please read [Writing definition files](1.%20Writing%20definition%20files.md) and [Using clitheme-exec](2.%20Using%20clitheme-exec.md).
+> To learn more, please read [Writing definition files](1.%20Writing%20definition%20files) and [Using clitheme-exec](2.%20Using%20clitheme-exec).
 
 ## 1. Getting the program output
 
@@ -16,7 +16,7 @@ You can use the `--debug` option to add an indicator at the start of each output
 >  `--showchars` and other options must be placed before the command (e.g. `clitheme-exec --showchars --debug clang`)
 
 > [!TIP]
-> To learn more, please read [Using clitheme-exec](2.%20Using%20clitheme-exec.md).
+> To learn more, please read [Using clitheme-exec](2.%20Using%20clitheme-exec).
 
 ```plaintext
 $ clitheme-exec --debug --showchars --nosubst clang test.c
@@ -114,7 +114,7 @@ We can now write the expression as substitution rules and place them in a defini
 
 #### Content variables
 
-You may have noticed that the two match expressions share the same prefix capture group expression. If you write more of these similar substitution rules, copying and maintaining them altogether can be very troublesome. Therefore, we can use [Content variables](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Content%20variables.md) to solve this problem:
+You may have noticed that the two match expressions share the same prefix capture group expression. If you write more of these similar substitution rules, copying and maintaining them altogether can be very troublesome. Therefore, we can use [Content variables](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Content%20variables) to solve this problem:
 
 ```plaintext
 {substrules}
@@ -139,10 +139,10 @@ You may have noticed that the two match expressions share the same prefix captur
 ```
 
 > [!TIP]
-> To learn more syntax definitions and features, please read [Writing definition files](1.%20Writing%20definition%20files.md).
+> To learn more syntax definitions and features, please read [Writing definition files](1.%20Writing%20definition%20files).
 
 > [!TIP]
-> To learn about features like character substitution, line bounds, and substitution rules options, please read [Available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md)
+> To learn about features like character substitution, line bounds, and substitution rules options, please read [Available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options)
 
 ## 3. Applying the definition file
 
