--- a/English/Custom man pages/1. Writing definition files.md
+++ b/English/Custom man pages/1. Writing definition files.md
@@ -1,12 +1,12 @@
 # Writing definition files: Custom man pages
 
-This article will detail how to write the `manpages` section in a [theme definition file](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/File%20format%20and%20syntax.md).
+This article will detail how to write the `manpages` section in a [theme definition file](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/File%20format%20and%20syntax).
 
 Please see [this article](https://www.man7.org/linux/man-pages/man1/man.1.html) for more information about Unix/Linux manual pages (man pages).
 
 ## Writing the `header` section
 
-First, you need to define some basic information about the theme and file, such as name and description. Please see [header section](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/header%20section.md) article.
+First, you need to define some basic information about the theme and file, such as name and description. Please see [header section](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/header%20section) article.
 
 ## About file paths
 
@@ -30,7 +30,7 @@ In a theme definition file, Unix man pages are defined in the `manpages` section
 
 You can use the `[file_content]` syntax to define man pages through file contents. Specify the target file path after the `[file_content]` phrase, like `[file_content] man1 example-app.1`.
 
-Indents in the `[file_content]` block are processed by how multi-line content blocks work; please see [Multi-line content block](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Multi-line%20content%20block.md) for more information.
+Indents in the `[file_content]` block are processed by how multi-line content blocks work; please see [Multi-line content block](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Multi-line%20content%20block) for more information.
 
 You can specify multiple `[file_content]` phrases at once to use the same file content for multiple files. They must be specified consecutively, but **there can be spaces or comments** between them. `[file_content]` phrases specified after other content lines are considered as file content instead of syntax definition.
 
@@ -56,7 +56,7 @@ You can specify multiple `[file_content]` phrases at once to use the same file c
 ```
 
 > [!TIP]
-> Please see [available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) for more options and features like line boundaries and content variables.
+> Please see [available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options) for more options and features like line boundaries and content variables.
 
 ### Including files using `<include_file>` and `[include_file]`
 
@@ -80,4 +80,4 @@ You can also use `[include_file]` to specify multiple target paths for one sourc
 
 ## Apply the theme (`clitheme apply-theme`)
 
-After writing the theme definition file, use `clitheme apply-theme <file>` to apply the theme. Then, use `clitheme-man` to access these man pages. See [Using clitheme-man](2.%20Using%20clitheme-man.md) for more information.
+After writing the theme definition file, use `clitheme apply-theme <file>` to apply the theme. Then, use `clitheme-man` to access these man pages. See [Using clitheme-man](2.%20Using%20clitheme-man) for more information.
