--- a/English/String entries and frontend API/Developer docs/3. Using the frontend module.md
+++ b/English/String entries and frontend API/Developer docs/3. Using the frontend module.md
@@ -1,9 +1,9 @@
 # Using the frontend module
 
-The frontend module can fetch string entries in the current theme data. It also has other features like [using local definition files](Using%20local%20theme%20definition%20files.md).
+The frontend module can fetch string entries in the current theme data. It also has other features like [using local definition files](Using%20local%20theme%20definition%20files).
 
 > [!NOTE]
-> The frontend module only supports Python 3. For other programming languages, you'll need to [directly access the data structure](1.%20Path%20names%20and%20data%20structure.md).
+> The frontend module only supports Python 3. For other programming languages, you'll need to [directly access the data structure](1.%20Path%20names%20and%20data%20structure).
 
 ## The `FetchDescriptor` class
 
@@ -26,7 +26,7 @@ f = frontend.FetchDescriptor(
 `FetchDescriptor` supports the following arguments:
 
 - `domain_name`, `app_name`, `subsections`: They will be automatically added to entry paths
-- `lang`: Override the automatically detected [system locale](../../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Locale%20support.md) and use the specified locales
+- `lang`: Override the automatically detected [system locale](../../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Locale%20support) and use the specified locales
     - You can specify multiple space-separated locales (e.g. `en_US zh_CN`); string entries of these locales will be searched in this order
 - `debug_mode`: If `True`, output additional debug messages
 - `disable_lang`: If `True`, disable locale detection and always use the `default` entry for all string entries
