--- a/简体中文/命令行输出替换/0. 样例教程.md
+++ b/简体中文/命令行输出替换/0. 样例教程.md
@@ -2,7 +2,7 @@
 
 本文章将展示命令行输出替换的一个样例，包含使用`clitheme-exec --showchars`获取所需的输出和为输出编写替换规则。
 
-> 如需了解更多信息，请阅读[编写定义文件](1.%20编写定义文件.md)和[使用clitheme-exec](2.%20使用clitheme-exec.md)文档。
+> 如需了解更多信息，请阅读[编写定义文件](1.%20编写定义文件)和[使用clitheme-exec](2.%20使用clitheme-exec)文档。
 
 本文章中的部分内容源自`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
 
@@ -18,7 +18,7 @@
 > `--showchars`和任何debug选项必须放在命令的前面（如`clitheme-exec --showchars --debug clang`）
 
 > [!TIP]
-> 如需了解更多信息，请阅读[使用clitheme-exec](2.%20使用clitheme-exec.md)文档。
+> 如需了解更多信息，请阅读[使用clitheme-exec](2.%20使用clitheme-exec)文档。
 
 ```plaintext
 $ clitheme-exec --debug --showchars --nosubst clang test.c
@@ -116,7 +116,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 #### 内容变量
 
-这时，你可能注意到这两个正则表达式都有相同的匹配内容（`prefix`命名组）。如果要写很多个类似的替换规则，复制相同的表达式会变得非常麻烦，并且很难一起修改。我们可以使用[内容变量](../附录：主题定义文件通用语法/内容变量.md)来解决这个问题。以下为使用内容变量后的定义：
+这时，你可能注意到这两个正则表达式都有相同的匹配内容（`prefix`命名组）。如果要写很多个类似的替换规则，复制相同的表达式会变得非常麻烦，并且很难一起修改。我们可以使用[内容变量](../附录：主题定义文件通用语法/内容变量)来解决这个问题。以下为使用内容变量后的定义：
 
 ```plaintext
 {substrules}
@@ -141,10 +141,10 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 ```
 
 > [!TIP]
-> 如需了解更多语法定义和功能（多行匹配/替换内容、多语言支持、命令限制规则等），请阅读[编写定义文件](1.%20编写定义文件.md)文档。
+> 如需了解更多语法定义和功能（多行匹配/替换内容、多语言支持、命令限制规则等），请阅读[编写定义文件](1.%20编写定义文件)文档。
 
 > [!TIP]
-> 如需了解字符替换、行边界、和替换规则选项等功能，请阅读[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)文档。
+> 如需了解字符替换、行边界、和替换规则选项等功能，请阅读[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项)文档。
 
 ## 3. 应用定义文件
 
