--- a/简体中文/命令行输出替换/1. 编写定义文件.md
+++ b/简体中文/命令行输出替换/1. 编写定义文件.md
@@ -1,10 +1,10 @@
 # 编写定义文件：命令行输出替换
 
-CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)的替换规则。
+CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法)的替换规则。
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)文章。
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落)文章。
 
 ## 定义替换规则
 
@@ -60,7 +60,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - **多行匹配**：在`[subst_string>>`或`[subst_regex>>`段落内输入用于匹配多行输出的文本内容/正则表达式，由`<<subst_string]`或`<<subst_regex]`结束段落
     - 如需匹配输出中的换行符号，建议把换行后的内容放在表达式的下一行上。**段落中的换行会匹配输出中不同类型的换行符。**
     - 如需在正则表达式中使用`\r`、`\n`等换行符号，建议通过`clitheme-exec --showchars <命令>`命令核对程序实际输出中使用的换行符号。
-    - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)
+    - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落)
 - CLItheme用的是Python内置的的正则表达式引擎，所以需使用Python的正则表达式语法。详细请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)
 
 ---
@@ -69,7 +69,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 - 如果替换的内容只有一行，你可以使用`locale[<系统语言>]:`并且在后面加上替换的内容。当前的系统语言符合时才会执行替换规则
     - 你可以同时指定多个系统语言，如`locale[en_US C]:`
-    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
+    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持)
 - 如果不需要限制语言，你可以使用`default:`（相当于`locale[default]:`）
     - 当规则中的其他语言定义匹配不上当前的系统语言时，该定义会被使用
 
@@ -77,18 +77,18 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 - 在`[locale]`文本段落内输入要替换的内容，并在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
     - 你可以同时指定多个系统语言，如：`[locale] en_US C`
-    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
-    - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)
+    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持)
+    - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落)
 - 如果不需要限制语言，你可以使用`[default]`文本段落（相当于`[locale] default`）
 
 ---
 
-- **如果输出内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）
-    - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md)`substesc`选项，并在内容中使用`{{ESC}}`
-    - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
+- **如果输出内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec)）
+    - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项)`substesc`选项，并在内容中使用`{{ESC}}`
+    - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
 
 > [!TIP]
-> 更多选项和功能（如内容变量、换行匹配指针控制序列、仅匹配前台进程输出）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
+> 更多选项和功能（如内容变量、换行匹配指针控制序列、仅匹配前台进程输出）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项)
 
 - 主题定义文件中的替换规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
     - 这意味着你可以通过多个替换规则来更改一行的输出，但需要考虑之前规则替换的内容
@@ -210,7 +210,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你也可以通过为限制规则[设定选项](../附录：主题定义文件通用语法/可以设定的选项.md)选择[其他的匹配机制](../附录：主题定义文件通用语法/可以设定的选项.md)，比如：
+你也可以通过为限制规则[设定选项](../附录：主题定义文件通用语法/可以设定的选项)选择[其他的匹配机制](../附录：主题定义文件通用语法/可以设定的选项)，比如：
 
 ```plaintext
 [filter_cmds]
@@ -226,4 +226,4 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ## 应用主题（`clitheme apply-theme`）
 
-主题定义文件写好后，请使用执行`clitheme apply-theme <文件名>`以应用主题，并使用`clitheme-exec`来使用这些替换规则。详见[使用clitheme-exec](2.%20使用clitheme-exec.md)。
+主题定义文件写好后，请使用执行`clitheme apply-theme <文件名>`以应用主题，并使用`clitheme-exec`来使用这些替换规则。详见[使用clitheme-exec](2.%20使用clitheme-exec)。
