--- a/简体中文/字符串定义和应用程序API/应用程序适配/3. 使用frontend模块.md
+++ b/简体中文/字符串定义和应用程序API/应用程序适配/3. 使用frontend模块.md
@@ -1,9 +1,9 @@
 # 使用frontend模块
 
-frontend模块包含了抓取当前主题中字符串的功能。除此之外，frontend还包括了其他的功能，比如[使用本地定义文件](调用本地主题定义文件.md)。
+frontend模块包含了抓取当前主题中字符串的功能。除此之外，frontend还包括了其他的功能，比如[使用本地定义文件](调用本地主题定义文件)。
 
 > [!NOTE]
-> frontend模块仅支持Python 3。其他编程语言的程序需要[直接访问数据结构](1.%20路径名称和数据结构.md)。
+> frontend模块仅支持Python 3。其他编程语言的程序需要[直接访问数据结构](1.%20路径名称和数据结构)。
 
 ## `FetchDescriptor` class
 
@@ -26,7 +26,7 @@ f = frontend.FetchDescriptor(
 `FetchDescriptor`支持以下参数：
 
 - `domain_name`，`app_name`，`subsections`：这些信息会被自动添加到路径中
-- `lang`：覆盖自动检测到的[系统语言](../../附录：主题定义文件通用语法/多语言支持.md)，并且使用该参数定义的语言信息
+- `lang`：覆盖自动检测到的[系统语言](../../附录：主题定义文件通用语法/多语言支持)，并且使用该参数定义的语言信息
     - 你可以指定多个语言；只要用空格分开即可（如`en_US zh_CN`）。获取字符串时会按照顺序依次尝试获取对应语言的字符串定义。
 - `debug_mode`：如果设置为`True`，调用功能时会输出更多信息，用于调试作用
 - `disable_lang`：如果设置为`True`，将会禁用自动语言检测，并且调用功能时将会永远使用当前主题定义中的`default`条目
@@ -79,7 +79,7 @@ f.retrieve_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}
 
 - `set_domain`，`set_appname`，和`set_subsections`：指定默认的`domain_name`，`app_name`，和`subsections`数值
 - `set_debugmode`：指定默认的`debug_mode`数值
-    - 该数值也会控制`frontend.set_local_themedef`函数的输出（详见[**调用本地主题定义文件**](调用本地主题定义文件.md)）
+    - 该数值也会控制`frontend.set_local_themedef`函数的输出（详见[**调用本地主题定义文件**](调用本地主题定义文件)）
 - `set_lang`：指定默认的`lang`数值
 - `set_disablelang`：指定默认的`disable_lang`数值
 
