--- a/简体中文/字符串定义和应用程序API/编写定义文件.md
+++ b/简体中文/字符串定义和应用程序API/编写定义文件.md
@@ -1,10 +1,10 @@
 # 编写定义文件：字符串定义
 
-本文章将会介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的字符串定义。
+本文章将会介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法)中的字符串定义。
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落)
 
 ## 编写字符串定义
 
@@ -18,11 +18,11 @@
 
 ### 使用`[entry]`段落
 
-要定义一个字符串，请使用`entry`段落，并且包括该字符串的[路径名称](./应用程序适配/1.%20路径名称和数据结构.md)，如`[entry] com.example example-app text-one`。
+要定义一个字符串，请使用`entry`段落，并且包括该字符串的[路径名称](./应用程序适配/1.%20路径名称和数据结构)，如`[entry] com.example example-app text-one`。
 
-CLItheme的核心设计理念之一是[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)，所以字符串内容会放在不同的语言定义中，其格式为：`locale[<语言>]: <内容>`。应用程序会根据系统语言设置获取对应语言定义中的内容。
+CLItheme的核心设计理念之一是[多语言支持](../附录：主题定义文件通用语法/多语言支持)，所以字符串内容会放在不同的语言定义中，其格式为：`locale[<语言>]: <内容>`。应用程序会根据系统语言设置获取对应语言定义中的内容。
 
-语言名称必须是Linux系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
+语言名称必须是Linux系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../附录：主题定义文件通用语法/多语言支持)）
 
 你可以同时指定多个系统语言，比如`locale[en_US default]:`。
 
@@ -43,7 +43,7 @@ CLItheme的核心设计理念之一是[多语言支持](../附录：主题定义
 ```
 
 > [!TIP]
-> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
+> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项)
 
 ### 多行文本段落
 
@@ -78,11 +78,11 @@ Another line like that
 A new line
 ```
 
-> 关于内容缩进机制和更多信息，请见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)。
+> 关于内容缩进机制和更多信息，请见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落)。
 
 ### 使用`<in_domainapp>`和`<in_subsection>`
 
-你可以使用`<in_domainapp>`和`<in_subsection>`以减少[字符串路径](./应用程序适配/1.%20路径名称和数据结构.md)中的重复。被定义时，这个信息会自动被添加在之后定义的字符串的`[entry]`路径前，以`<domain> <app> <subsections> [路径]`的格式处理。
+你可以使用`<in_domainapp>`和`<in_subsection>`以减少[字符串路径](./应用程序适配/1.%20路径名称和数据结构)中的重复。被定义时，这个信息会自动被添加在之后定义的字符串的`[entry]`路径前，以`<domain> <app> <subsections> [路径]`的格式处理。
 
 `<in_domainapp>`的格式为`<in_domainapp> [domain] [app]`，并且只能指定两个由空格分开的名称。`<in_subsection>`的格式为`<in_subsection> <subsection[s]>`，并且可以有多个subsection。
 
