--- a/简体中文/自定义manpage文档/1. 编写定义文件.md
+++ b/简体中文/自定义manpage文档/1. 编写定义文件.md
@@ -1,12 +1,12 @@
 # 编写定义文件：manpage文档
 
-本文章将介绍[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的`manpages`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）文档，达到文档自定义的目的。
+本文章将介绍[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法)中的`manpages`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）文档，达到文档自定义的目的。
 
 有关Unix/Linux文档手册的更多信息，请见[本文章](https://www.man7.org/linux/man-pages/man1/man.1.html)。
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落)
 
 ## 关于文件路径信息
 
@@ -30,7 +30,7 @@
 
 你可以使用`[file_content]`语法通过输入文件内容来定义文档手册。在`[file_content]`语句后面需要添加目标文件路径，比如`[file_content] man1 example-app.1`。
 
-在`[file_content]`内容中的缩进会根据多行文本段落的机制处理。详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)
+在`[file_content]`内容中的缩进会根据多行文本段落的机制处理。详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落)
 
 你可以同时指定多个`[file_content]`语句，以在同一文件内容下覆盖多个文档文件。它们必须指定与相邻的`[file_content]`语句之后，**并且中间可以有空行或注释**。在其他内容后插入`[file_content]`语句会被视为文件内容，而不是语法定义。
 
@@ -56,7 +56,7 @@
 ```
 
 > [!TIP]
-> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
+> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项)
 
 ### 引用文件：`<include_file>`和`[include_file]`
 
@@ -80,4 +80,4 @@
 
 ## 应用主题（`clitheme apply-theme`）
 
-主题定义文件写好后，使用`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-man`来使用这些文档手册。详见[使用clitheme-man](2.%20使用clitheme-man.md)。
+主题定义文件写好后，使用`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-man`来使用这些文档手册。详见[使用clitheme-man](2.%20使用clitheme-man)。
