--- a/简体中文/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/简体中文/附录：主题定义文件通用语法/可以设定的选项.md
@@ -71,7 +71,7 @@
 
 以下选项适用于定义文件中的大多数文本内容和多行文本段落。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstvar`。
 
-- `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](内容变量.md)）
+- `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](内容变量)）
 - `linebounds`：支持在内容首末指定行边界字符`|`，以在开端和末尾中插入空格
     - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
     - **部分地方（如路径名称等）即使使用行边界，依然不会保留首末空格**
