--- a/简体中文/附录：主题定义文件通用语法/文件格式和语法.md
+++ b/简体中文/附录：主题定义文件通用语法/文件格式和语法.md
@@ -14,7 +14,7 @@
 
 主题定义文件是按照段落来区分所对应的内容的。每一个段落对应着不同的功能，并且包含着不同的内容定义。这些段落包括`{entries}`、`{substrules}`、`{manpages}`等。
 
-每一个主题定义文件中都会包含`header`段落（`{header}`）。这个段落中包含了这个主题定义的一些基本信息，比如名称，详细介绍，版本等。详细请见[header段落](header段落.md)。
+每一个主题定义文件中都会包含`header`段落（`{header}`）。这个段落中包含了这个主题定义的一些基本信息，比如名称，详细介绍，版本等。详细请见[header段落](header段落)。
 
 > [!NOTE]
 > 文档中的文件语法示例会包含缩进。这只是为了提升定义的可读性而已；实际上不需要包含缩进。但是，为了可读性建议拥有包含缩进的好习惯。
