--- a/English/CLI output substitution/1. Writing definition files.md
+++ b/English/CLI output substitution/1. Writing definition files.md
@@ -1,10 +1,10 @@
 # Writing definition files: CLI output substitution
 
-CLItheme allows you to customize the output of any command-line application through substitution rules. This article details how to write substitution rules in a [theme definition file](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/File%20format%20and%20syntax.md).
+CLItheme allows you to customize the output of any command-line application through substitution rules. This article details how to write substitution rules in a [theme definition file](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/File%20format%20and%20syntax).
 
 ## Writing the `header` section
 
-First, you need to define some basic information about the theme and file, such as name and description. Please see the [header section](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/header%20section.md) article.
+First, you need to define some basic information about the theme and file, such as name and description. Please see the [header section](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/header%20section) article.
 
 ## Defining substitution rules
 
@@ -60,7 +60,7 @@ This is the syntax for defining substitution rules:
 - **Multi-line match**: Place the string/regex pattern in the `[subst_string>>` or `[subst_regex>>` clause, terminating with `<<subst_string]` or `<<subst_regex]`
     - It's recommended to use newlines in the content block for matching newline characters in output, since **newlines in match expression will match different types of newline characters**.
     - If you want to use `\r` or `\n` in regex match patterns, verify the actual newline character used in the output with `clitheme-exec --showchars <command>`
-    - Indents in the content block are processed by how multi-line content blocks work; please see [Multi-line content block](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Multi-line%20content%20block.md) for more information.
+    - Indents in the content block are processed by how multi-line content blocks work; please see [Multi-line content block](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Multi-line%20content%20block) for more information.
 - CLItheme uses the Python's built-in regex engine, meaning that regex patterns use Python's regex syntax. Please see [this article](https://docs.python.org/zh-cn/3/howto/regex.html) for more information.
 
 ---
@@ -69,7 +69,7 @@ This is the syntax for defining substitution rules:
 
 - If there is only one line in the substitute content, you can use `locale[<Locale>]:` syntax and add the content after this clause. The rule will be active only if the current system locale matches the defined locale.
     - You can define multiple locales, such as `locale[en_US C]:`
-    - For more information on locale support, please see the [Locale support](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Locale%20support.md) article
+    - For more information on locale support, please see the [Locale support](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Locale%20support) article
 - If you don't need to restrict to a specific locale, you can use the `default:` syntax (equivalent to `locale[default]:`)
     - It acts as a "fallback" option: it will be used when other locale definitions don't match the system locale
 
@@ -77,19 +77,19 @@ This is the syntax for defining substitution rules:
 
 - Input the substitute content in the `[locale]` content block, and add locale names after this clause. 
     - You can define multiple locales, such as `[locale] en_US C`
-    - For more information on locale support, please see the [Locale support](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Locale%20support.md) article
-    - Indents in the content block are processed by how multi-line content blocks work; please see [Multi-line content block](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Multi-line%20content%20block.md) for more information.
+    - For more information on locale support, please see the [Locale support](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Locale%20support) article
+    - Indents in the content block are processed by how multi-line content blocks work; please see [Multi-line content block](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Multi-line%20content%20block) for more information.
 - If you don't need to restrict to a specific locale, you can use the `[default]` syntax (equivalent to `[locale] default`)
     - It acts as a "fallback" option: it will be used when other locale definitions don't match the system locale
 
 ---
 
-- **If the output contains any terminal control sequences, they must be included in the match expression.** You can use the `clitheme-exec --showchars` command to see these control characters in green color. (see [Using clitheme-exec](2.%20Using%20clitheme-exec.md) for more information)
-    - To use the ANSI Escape character (`{{ESC}}`), please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) the `substesc` option and use `{{ESC}}` in content
-    - To use other characters like `\x08` or `\x07`, please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) the `substchar` option and use phrases like `{{[x08]}}` in content
+- **If the output contains any terminal control sequences, they must be included in the match expression.** You can use the `clitheme-exec --showchars` command to see these control characters in green color. (see [Using clitheme-exec](2.%20Using%20clitheme-exec) for more information)
+    - To use the ANSI Escape character (`{{ESC}}`), please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options) the `substesc` option and use `{{ESC}}` in content
+    - To use other characters like `\x08` or `\x07`, please [enable](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options) the `substchar` option and use phrases like `{{[x08]}}` in content
 
 > [!TIP]
-> Please see [Available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) for more options and features like content variables, matching cursor position sequences with newlines, matching only if process is foreground.
+> Please see [Available options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options) for more options and features like content variables, matching cursor position sequences with newlines, matching only if process is foreground.
 
 - Substitution rules are applied in the order which they are defined in the file; if there are multiple files, the theme/file ordering is used
     - This means that you can modify the same line of output through multiple substitution rules, but content replaced previously needs to be considered
@@ -211,7 +211,7 @@ By default, if the first phrase of the command matches and the command includes 
 
 For example, the command `rm something -rf` will match the command filter `rm -rf`, but will not match `something -rf rm` (different first phrase) and `rm -f` (command doesn't include `-f`)
 
-You can choose [other matching mechanisms](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) by [setting options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options.md) for command filters, such as:
+You can choose [other matching mechanisms](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options) by [setting options](../[Appendix]%20Common%20syntax%20of%20theme%20definition%20files/Available%20options) for command filters, such as:
 
 ```plaintext
 [filter_cmds]
@@ -227,4 +227,4 @@ You can choose [other matching mechanisms](../[Appendix]%20Common%20syntax%20of%
 
 ## Apply the theme (`clitheme apply-theme`)
 
-After writing the theme definition file, use `clitheme apply-theme <filename>` to apply the theme, and use `clitheme-exec` to use the substitution rules. Please see [Using clitheme-exec](2.%20Using%20clitheme-exec.md) for more information.
+After writing the theme definition file, use `clitheme apply-theme <filename>` to apply the theme, and use `clitheme-exec` to use the substitution rules. Please see [Using clitheme-exec](2.%20Using%20clitheme-exec) for more information.
